--- a/test2.html
+++ b/test2.html
@@ -11,7 +11,7 @@
 <meta name="author" content="Hiroaki Yutani" />
 
 
-<title>test</title>
+<title>test2</title>
 
 <script src="libs/jquery-1.11.0/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -92,24 +92,31 @@ img {
 </div><!--/.navbar -->
 
 <div id="header">
-<h1 class="title">test</h1>
+<h1 class="title">test2</h1>
 <h4 class="author"><em>Hiroaki Yutani</em></h4>
-<h4 class="date"><em>2015年7月4日</em></h4>
+<h4 class="date"><em>2015年9月19日</em></h4>
 </div>
 
 
 <p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
 <p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
-<pre class="r"><code>summary(cars)</code></pre>
-<pre><code>##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00</code></pre>
+<pre class="r"><code>summary(iris)</code></pre>
+<pre><code>##   Sepal.Length    Sepal.Width     Petal.Length    Petal.Width   
+##  Min.   :4.300   Min.   :2.000   Min.   :1.000   Min.   :0.100  
+##  1st Qu.:5.100   1st Qu.:2.800   1st Qu.:1.600   1st Qu.:0.300  
+##  Median :5.800   Median :3.000   Median :4.350   Median :1.300  
+##  Mean   :5.843   Mean   :3.057   Mean   :3.758   Mean   :1.199  
+##  3rd Qu.:6.400   3rd Qu.:3.300   3rd Qu.:5.100   3rd Qu.:1.800  
+##  Max.   :7.900   Max.   :4.400   Max.   :6.900   Max.   :2.500  
+##        Species  
+##  setosa    :50  
+##  versicolor:50  
+##  virginica :50  
+##                 
+##                 
+## </code></pre>
 <p>You can also embed plots, for example:</p>
-<p><img src="figures//test_files/figure-htmlunnamed-chunk-3-1.png" title="" alt="" width="672" /></p>
+<p><img src="test2_files/figure-html/unnamed-chunk-2-1.png" title="" alt="" width="672" /></p>
 <p>Note that the <code>echo = FALSE</code> parameter was added to the code chunk to prevent printing of the R code that generated the plot.</p>
 
 <script type="text/javascript" src="libs/fluidbox/jquery.fluidbox.min.js"></script>
