--- a/README.html
+++ b/README.html
@@ -69,6 +69,7 @@ img {
 </style>
 <div class="container-fluid main-container">
 
+
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
@@ -78,6 +79,12 @@ img {
       <ul class="nav navbar-nav">
         <li><a href="./index.html">Home</a></li>
         <li><a href="https://github.com/yutannihilation/rmarkdown-website-template">Github</a></li>
+        <li class="dropdown">
+          <a href="authoring" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pages<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">          <li><a href="test">test.html</a></li>
+          <li><a href="test2">test2.html</a></li>
+          </ul>
+        </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
